fixing mismatched div tags

--- a/bell/index.html
+++ b/bell/index.html
@@ -62,7 +62,7 @@
 
 
   function loadHome() {
-    console.log('home')
+    createPlayer('fs', 'fullscreen', 'main', 'drm1')
 
   }
 
@@ -131,7 +131,7 @@
       <div class="col-sm-4" id='small3'> </div>
     </div>
 
-    <div class="playlist-wrapper"> <ol class="vjs-playlist"></ol></div></div>
+    <div class="playlist-wrapper"> <ol class="vjs-playlist"></ol></div>
   </div>
 </div>
 <!-- <footer class="container">
