--- a/chivas/index.html
+++ b/chivas/index.html
@@ -105,9 +105,59 @@
           <a href="#modal-login" data-lightbox="inline"  class="btn btn-danger bgcolor border-color">Comprar iPPV $125 MXN</a>
         </div>
       </div>
-
     </div>
-
+  </div>
+</div>
+<div class="container-fluid">
+  <!-- cta panels -->
+  <div class="row">
+    <div class="col-md-3">
+      <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384378-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
+      <div class="portfolio-desc">
+        <h3>Previo Chivas VS Tigres
+          <span class="free label label-success">gratis</span>
+        </h3>
+        <span>Disfruta de los comentarios y el gran ambiente que se vive en el estadio previo al encuentro.</span>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384278-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
+      <div class="portfolio-desc">
+        <h3>Chivas vs Tigres USA
+          <span class="free label label-warning">premium</span>
+        </h3>
+        <span> </span>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384334-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
+      <div class="portfolio-desc">
+        <h3>Tiempos Extras Chivas VS Tigres
+          <span class="free label label-success">gratis</span>
+        </h3>
+        <span>Revive las mejores jugadas con el análisis de nuestros expertos.</span>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1471371255-320.jpg" alt="" style="visibility: visible; opacity: 1; display: block;">
+      <div class="portfolio-desc">
+        <h3>Bienvenidos a la Nueva Era de Chivas
+          <span class="free label label-success">gratis</span>
+        </h3>
+        <span>Disfruta de la presentación de las gorras New Era-Chivas,
+    							para los que siempre llevamos al Rebaño Sagrado en la cabeza.</span>
+      </div>
+    </div>
+  </div>
+  <!--//cta panels -->
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="faq">
+        <a href="faq.php"><img src="img/FAQ.png" alt="" width="100%"></a>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -115,136 +165,7 @@
 <div class="starter-template">
   <section id="content" style="margin-bottom: 0px;">
     <div class="content-wrap">
-      <div class="section-nobottommargin">
-        <h2 class="center nobottommargin ls1">ÚNETE AL EQUIPO</h2>
-      </div>
-
-
-
-
-      <div class="row">
-        <div class="col-md-3">
-          <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384378-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
-          <div class="portfolio-desc">
-            <h3>Previo Chivas VS Tigres
-              <span class="free label label-success">gratis</span>
-            </h3>
-            <span>Disfruta de los comentarios y el gran ambiente que se vive en el estadio previo al encuentro.</span>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384278-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
-          <div class="portfolio-desc">
-            <h3>Chivas vs Tigres USA
-              <span class="free label label-warning">premium</span>
-            </h3>
-            <span> </span>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384334-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
-          <div class="portfolio-desc">
-            <h3>Tiempos Extras Chivas VS Tigres
-              <span class="free label label-success">gratis</span>
-            </h3>
-            <span>Revive las mejores jugadas con el análisis de nuestros expertos.</span>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1471371255-320.jpg" alt="" style="visibility: visible; opacity: 1; display: block;">
-          <div class="portfolio-desc">
-            <h3>Bienvenidos a la Nueva Era de Chivas
-              <span class="free label label-success">gratis</span>
-            </h3>
-            <span>Disfruta de la presentación de las gorras New Era-Chivas,
-    							para los que siempre llevamos al Rebaño Sagrado en la cabeza.</span>
-          </div>
-        </div>
-      </div>
-
-<!-- start --
-      <div class="portfolio grid-container portfolio-full clearfix" style="position: relative; height: 308.562px;">
-        <article class="portfolio-item pf-illustrations" style="width: 321px; position: absolute; left: 0px; top: 0px;">
-          <div class="portfolio-image">
-            <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384378-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
-            <div class="portfolio-overlay">
-
-
-              <a href="#modal-login" data-lightbox="inline" class="center-icon"><i class="icon-line-play"></i></a>
-
-            </div>
-          </div>
-          <div class="portfolio-desc">
-            <h3>Previo Chivas VS Tigres
-              <span class="free label label-success">gratis</span>
-            </h3>
-            <span>Disfruta de los comentarios y el gran ambiente que se vive en el estadio previo al encuentro.</span>
-          </div>
-        </article>
-        <article class="portfolio-item pf-illustrations" style="width: 321px; position: absolute; left: 0px; top: 0px;">
-          <div class="portfolio-image">
-            <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384278-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
-            <div class="portfolio-overlay">
-
-
-              <a href="#modal-login" data-lightbox="inline" class="center-icon"><i class="icon-line-play"></i></a>
-
-            </div>
-          </div>
-          <div class="portfolio-desc">
-            <h3>Chivas vs Tigres USA
-              <span class="free label label-warning">premium</span>
-            </h3>
-            <span> </span>
-          </div>
-        </article>
-        <article class="portfolio-item pf-illustrations" style="width: 321px; position: absolute; left: 0px; top: 0px;">
-          <div class="portfolio-image">
-            <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384334-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
-            <div class="portfolio-overlay">
-
-
-              <a href="#modal-login" data-lightbox="inline" class="center-icon"><i class="icon-line-play"></i></a>
-
-            </div>
-          </div>
-          <div class="portfolio-desc">
-            <h3>Tiempos Extras Chivas VS Tigres
-              <span class="free label label-success">gratis</span>
-            </h3>
-            <span>Revive las mejores jugadas con el análisis de nuestros expertos.</span>
-          </div>
-        </article>
-        <article class="portfolio-item pf-illustrations" style="width: 321px; position: absolute; left: 0px; top: 0px;">
-          <div class="portfolio-image">
-            <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1471371255-320.jpg" alt="" style="visibility: visible; opacity: 1; display: block;">
-            <div class="portfolio-overlay">
-
-
-              <a href="#modal-login" data-lightbox="inline" class="center-icon"><i class="icon-line-play"></i></a>
-
-            </div>
-          </div>
-          <div class="portfolio-desc">
-            <h3>Bienvenidos a la Nueva Era de Chivas
-              <span class="free label label-success">gratis</span>
-            </h3>
-            <span>Disfruta de la presentación de las gorras New Era-Chivas,
-    							para los que siempre llevamos al Rebaño Sagrado en la cabeza.</span>
-          </div>
-        </article>
-      </div>
-!-- end -->
-
-
       <div class="line"></div>
-
-
-
-
-      <div class="faq">
-        <a href="faq.php"><img src="img/FAQ.png" alt="" width="100%"></a>
-      </div>
 
 
       <div class="section-nobottommargin">
