Tried to better center the text overlay on the video player

--- a/chivas/index.html
+++ b/chivas/index.html
@@ -74,8 +74,10 @@
         </video>
         <div class="video-content-overlay">
           <div class="content">
-            <img src="img/chivastv-logo.png" alt="chivastv logo">
+            <img src="img/chivastv-logo.png" alt="chivastv logo" width="75%">
+            <div width="65%">
             <p>LA NUEVA ERA DEL FUTBOL <br>ADÉNTRATE AL MUNDO ROJIBLANCO EN VIVO Y EN HD</p>
+            </div>
           </div>
         </div>
       </div>
