removing padding from grid images

--- a/chivas/index.html
+++ b/chivas/index.html
@@ -74,7 +74,7 @@
         </video>
         <div class="video-content-overlay">
           <div class="content">
-            <img src="img/chivastv-logo.png" alt="chivastv logo">
+            <h2><img src="img/chivastv-logo.png" alt="chivastv logo"></h2>
             <p>LA NUEVA ERA DEL FUTBOL <br>ADÉNTRATE AL MUNDO ROJIBLANCO EN VIVO Y EN HD</p>
           </div>
         </div>
@@ -111,7 +111,7 @@
 <div class="container-fluid">
   <!-- cta panels -->
   <div class="row section portfolio-full">
-    <div class="col-md-3">
+    <div class="col-sm-3 nopad">
       <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384378-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
       <div class="portfolio-desc">
         <h3>Previo Chivas VS Tigres
@@ -120,7 +120,7 @@
         <span>Disfruta de los comentarios y el gran ambiente que se vive en el estadio previo al encuentro.</span>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3 nopad">
       <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384278-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
       <div class="portfolio-desc">
         <h3>Chivas vs Tigres USA
@@ -129,7 +129,7 @@
         <span> </span>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3 nopad">
       <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1474384334-320.png" alt="" style="visibility: visible; opacity: 1; display: block;">
       <div class="portfolio-desc">
         <h3>Tiempos Extras Chivas VS Tigres
@@ -138,7 +138,7 @@
         <span>Revive las mejores jugadas con el análisis de nuestros expertos.</span>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3 nopad">
       <img src="https://d4ytl3mufd852.cloudfront.net/chivasImages/1471371255-320.jpg" alt="" style="visibility: visible; opacity: 1; display: block;">
       <div class="portfolio-desc">
         <h3>Bienvenidos a la Nueva Era de Chivas
