fixing overlay text on mobile

--- a/chivas/index.html
+++ b/chivas/index.html
@@ -13,7 +13,7 @@
   <title>Chivas TV</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700%7CRaleway:300,400,500,600,700%7CCrete+Round:400italic" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -74,8 +74,8 @@
         </video>
         <div class="video-content-overlay">
           <div class="content">
-            <img src="img/chivastv-logo.png" alt="chivastv logo">
-            <p>LA NUEVA ERA DEL FUTBOL <br>ADÉNTRATE AL MUNDO ROJIBLANCO EN VIVO Y EN HD</p>
+            <h2><img src="img/chivastv-logo.png" alt="chivastv logo"></h2>
+            <p class="hidden-xs">LA NUEVA ERA DEL FUTBOL <br>ADÉNTRATE AL MUNDO ROJIBLANCO EN VIVO Y EN HD</p>
           </div>
         </div>
       </div>
