fixing mobile nav

--- a/chivas/index.html
+++ b/chivas/index.html
@@ -33,7 +33,7 @@
 <body>
 
 <nav class="navbar navbar-inverse navbar-static-top main-nav">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
@@ -41,7 +41,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://solutions.brightcove.com/crutman/Chivas/html/template/index.html"><img height = "100" width = "125" src="http://solutions.brightcove.com/crutman/Chivas/html/template/chivastv-logo.png" alt="Chivas TV"></a>
+      <a class="navbar-left" href="http://solutions.brightcove.com/crutman/Chivas/html/template/index.html"><img height = "100" width = "125" src="http://solutions.brightcove.com/crutman/Chivas/html/template/chivastv-logo.png" alt="Chivas TV"></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
