--- a/chivas/index.html
+++ b/chivas/index.html
@@ -45,10 +45,7 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="http://solutions.brightcove.com/crutman/Chivas/html/template/faq.html">FAQ</a></li>
-        <li><a href="http://site-318704.bcvp0rtal.com">USA VOD</a></li>
-        <li><a href="http://site-939819.bcvp0rtal.com">Mexican VOD</a></li>
-        <li><a href="http://site-552860.bcvp0rtal.com">Freemium</a></li>
+        <li><a href="http://solutions.brightcove.com/crutman/Chivas/html/template/index.html">Home</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Live Games <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -58,8 +55,10 @@
             <li><a href="http://site-355109.bcvp0rtal.com">Live Stream 4</a></li>
           </ul>
         </li>
-        <li>
-          <a href="http://solutions.brightcove.com/crutman/Chivas/html/template/index.html">Home</a></li>
+        <li><a href="http://site-552860.bcvp0rtal.com">Freemium</a></li>
+        <li><a href="http://site-939819.bcvp0rtal.com">Mexican VOD</a></li>
+        <li><a href="http://site-318704.bcvp0rtal.com">USA VOD</a></li>
+        <li><a href="http://solutions.brightcove.com/crutman/Chivas/html/template/faq.html">FAQ</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
