--- a/chivas/index.html
+++ b/chivas/index.html
@@ -41,11 +41,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-left" href="http://solutions.brightcove.com/crutman/Chivas/html/template/index.html"><img height = "100" width = "125" src="http://solutions.brightcove.com/crutman/Chivas/html/template/chivastv-logo.png" alt="Chivas TV"></a>
+      <a class="navbar-left" href="http://solutions.brightcove.com/cfuller/chivas/"><img height = "100" width = "125" src="img/chivastv-logo.png" alt="Chivas TV"></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="http://solutions.brightcove.com/crutman/Chivas/html/template/index.html">Home</a></li>
+        <li><a href="http://solutions.brightcove.com/cfuller/chivas/">Home</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Live Games <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -58,7 +58,7 @@
         <li><a href="http://site-552860.bcvp0rtal.com">Freemium</a></li>
         <li><a href="http://site-939819.bcvp0rtal.com">Mexican VOD</a></li>
         <li><a href="http://site-318704.bcvp0rtal.com">USA VOD</a></li>
-        <li><a href="http://solutions.brightcove.com/crutman/Chivas/html/template/faq.html">FAQ</a></li>
+        <li><a href="https://www.chivastv.mx/faq.php">FAQ</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
