--- a/chivas/index.html
+++ b/chivas/index.html
@@ -41,7 +41,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-left" href="http://solutions.brightcove.com/cfuller/chivas/"><img height = "100" width = "125" src="img/chivastv-logo.png" alt="Chivas TV"></a>
+      <a class="navbar-left" href="http://solutions.brightcove.com/cfuller/chivas/"><img height = "100" width = "125" src="img/chivastv-logo-sm.png" alt="Chivas TV"></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
