--- a/chivas/index.html
+++ b/chivas/index.html
@@ -68,9 +68,14 @@
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <div class="bg-video">
-        <video id="slide-video" poster="https://static.chivastv.mx/slider/chivastvbg.jpg" preload="auto" loop="" autoplay="" muted="">
-          <source src="https://static.chivastv.mx/slider/chivastv.mp4" type="video/mp4">
-        </video>
+        <script>
+          if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
+            document.write('<div class="video-placeholder"></div>');
+          }
+          else {
+            document.write('<video id="slide-video" poster="https://static.chivastv.mx/slider/chivastvbg.jpg" preload="auto" loop="" autoplay="" muted=""><source src="https://static.chivastv.mx/slider/chivastv.mp4" type="video/mp4"></video>');
+          }
+        </script>
         <div class="video-content-overlay">
           <div class="content">
             <h2><img src="img/chivastv-logo.png" alt="chivastv logo"></h2>
