--- a/pga/index.html
+++ b/pga/index.html
@@ -5,8 +5,8 @@
 
   
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-  <script src="bootstrap.min.js"></script>
-  <script src="demoPlayer.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/demoPlayer.js"></script>
   
  
   <script>
@@ -82,8 +82,8 @@
 
   </script>
 
-  <link rel="stylesheet" href="bootstrap.min.css" />
-  <link rel="stylesheet" href="bell.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/bell.css" />
   <link rel="stylesheet" href="http://solutions.brightcove.com/dbornstein/dev/cust/patch/patchExample.css" />
   <link rel="stylesheet" href="https://rawgit.com/brightcove/videojs-thumbnails/master/videojs.thumbnails.css" />
 
