updating home page video

--- a/pga/index.html
+++ b/pga/index.html
@@ -105,12 +105,12 @@
       </div>
     </div>
     <div class="collapse navbar-collapse" id="nav1">
-      <ul class="nav navbar-nav navbar-right" >
-        <li><a href="#"  onclick="loadPoc1()" selected>Playlist</a></li>
-        <li><a href="#"  onclick="loadPoc2()">Security</a></li>
-        <li><a href="#"  onclick="loadPoc3()">Manual Switching</a></li>
-        <li><a href="#"  onclick="loadPoc4()">Recommendations</a></li>
-        <li><a href="#"  onclick="loadPoc5()">Thumbnail Scrubber</a></li>
+      <ul class="nav navbar-nav" >
+        <li><a href="#"  onclick="loadPoc1()" selected><span>Playlist</span></a></li>
+        <li><a href="#"  onclick="loadPoc2()"><span>Security</span></a></li>
+        <li><a href="#"  onclick="loadPoc3()"><span>Manual Switching</span></a></li>
+        <li><a href="#"  onclick="loadPoc4()"><span>Recommendations</span></a></li>
+        <li><a href="#"  onclick="loadPoc5()"><span>Thumbnail Scrubber</span></a></li>
       </ul>
     </div>
   </div>
